--- a/customer/templates/list_client.html
+++ b/customer/templates/list_client.html
@@ -2,7 +2,8 @@
 
 {% block content %}
 <div class="container">
-
+<fieldset>
+<legend class="center">Liste des Clients</legend>
     <table class="table table-bordered">
         <tr>
             <th class="center">Prénom</th>
@@ -32,4 +33,5 @@
     </table>
 </div>
 
+</fieldset>
 {% endblock %}
