--- a/mon_facturier/templates/header.html
+++ b/mon_facturier/templates/header.html
@@ -17,8 +17,8 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Produits <span class="caret"></span></a>
           <ul class="dropdown-menu">
-              <li><a href="">Liste</a></li>
-              <li><a href="">Nouveau</a></li>
+              <li><a href="{% url 'list-product' %}">Liste</a></li>
+              <li><a href="{% url 'create-product' %}">Nouveau</a></li>
           </ul>
         </li>
         <li class="dropdown">
